[package]
name = "cachewarmer-nightly"
version = "0.1.0"
authors = ["Grzegorz Nosek <root@localdomain.pl>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", features = ["compat"] }
reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master" }
runtime = { git = "https://github.com/rustasync/runtime", branch = "master" }
runtime-tokio = { git = "https://github.com/rustasync/runtime", branch = "master" }
