[package]
name = "dns-spoilers"
version = "0.1.0"
authors = ["Grzegorz Nosek <root@localdomain.pl>"]
edition = "2018"

[dependencies]
dns = { git = "https://github.com/gnosek/rust-lab-dns" }
futures = "0.3"
tokio = { version = "1", features = ["macros", "net", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }
